[package]
name = "esp32c3"
version = "0.1.0"
authors = ["Nikita Sivakov <sivakov512@icloud.com>"]
edition = "2021"
license = "MIT"

[dependencies]
esp-backtrace = { version = "0.12", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.18", features = [ "esp32c3", "async" ] }
embedded-storage = "0.3"
esp-storage = { version = "0.3", features = [ "esp32c3" ] }
esp-println = { version = "0.9", features = ["esp32c3", "log"] }
log = { version = "0.4" }
esp-wifi = { version = "0.6", features = [
    "esp32c3",
    "wifi-default",
    "utils",
    "phy-enable-usb",
] }
smoltcp = { version = "0.11", default-features = false, features = [
    "proto-igmp",
    "proto-ipv4",
    "socket-tcp",
    "socket-icmp",
    "socket-udp",
    "medium-ethernet",
    "proto-dhcpv4",
    "socket-raw",
    "socket-dhcpv4",
] }
embedded-io = "0.6"
heapless = { version = "0.8", default-features = false }
embedded-hal-nb = "1.0"
nb = "1.1"
embassy-executor = "0.5"
embassy-time = "0.3"
esp-hal-embassy = { version = "0.1" , features = [ "esp32c3", "time-timg0", "integrated-timers" ]}
embassy-sync = "0.6"
embedded-io-async = "0.6"
